Updating the to-do list.

--- a/_posts/2023-02-21-todo_list.md
+++ b/_posts/2023-02-21-todo_list.md
@@ -8,5 +8,5 @@ tags: [note]
 - [x] 第一階段
   + [x] 轉移舊有文章
   + [x] 開啟本站的評論功能
-- [ ] 第二階段
-  + [ ] 在這個站上發佈文章(除了這個)
+- [x] 第二階段
+  + [x] 在這個站上發佈文章(除了這個)
